Fix overflowing and paddings on home page for tablet

--- a/src/components/pages/Home/components/Comparisons/ComparisonMatrix/style.scss
+++ b/src/components/pages/Home/components/Comparisons/ComparisonMatrix/style.scss
@@ -30,13 +30,16 @@
                 text-overflow: ellipsis;
                 top: 0;
                 transform: rotate(-30deg);
-                width: 55px;
+                width: 70px;
             }
         }
 
         &_right-header {
+            max-width: 70px;
+            overflow: hidden;
             padding-right: 5px;
             text-align: right;
+            text-overflow: ellipsis;
         }
 
         &_value {
