--- a/src/components/pages/Home/components/Comparisons/style.scss
+++ b/src/components/pages/Home/components/Comparisons/style.scss
@@ -6,6 +6,8 @@
 
     &__header {
         display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     &__matrix {
@@ -36,7 +38,12 @@
 
         &__widgets {
             display: table;
+            table-layout: fixed;
             width: 100%;
+        }
+
+        &__widgets-container {
+            display: table-row;
         }
 
         &__list {
