--- a/src/components/pages/Home/components/ConsistencyTable/style.scss
+++ b/src/components/pages/Home/components/ConsistencyTable/style.scss
@@ -11,16 +11,25 @@
     &__table {
         border-collapse: collapse;
         color: $color-main-text;
+        font-size: $font-xs;
         margin-top: 15px;
+        table-layout: fixed;
         text-align: center;
         width: 100%;
 
-        tr {
-            height: 30px;
-        }
-
         td {
             border: 1px solid #102027;
+            padding: 5px 10px;
         }
+    }
+
+    &__consistency-record {
+        height: 30px;
+    }
+
+    &__matrix-name,
+    &__consistency-value {
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 }
